styles/project_style.css
body {
	background-color: white;
}

@font-face {
	font-family: Quicksand-Regular;
	src: url(../fonts/Quicksand-Regular.ttf);
}

@font-face {
	font-family: Quicksand-Bold;
	src: url(../fonts/Quicksand-Bold.ttf);
}

@font-face {
	font-family: Roboto-Regular;
	src: url(../fonts/Roboto-Regular.ttf);
}

@font-face {
	font-family: Roboto-Light;
	src: url(../fonts/Roboto-Light.ttf);
}

.heading {
	color: black;
	font-family: Quicksand-Bold;
	font-size: 50px;
	text-align: center;
	padding: 0px;
	margin: 0px;
}

.subheading {
	color: 	#A9A9A9;
	font-family: Roboto-Light;
	font-size: 25px;
	text-align: center;
	margin-top: 50px;
}

#wrapper {
    height: 100%;
}

#title {
	margin-bottom: 50px;
}

.publications {
	max-width: 700px;
	margin: auto;
	margin-bottom: 10px;
}

.publication {
	font-size: 18px;
	font-family: Roboto-Light;
}

.row {
  display: flex;
	max-width: 900px;
	margin: auto;
	margin-bottom: 10px;
	overflow: auto;
}

.column {
  flex: 33.33%;
  padding: 25px;
	min-width: 250px;
}

/* width */
::-webkit-scrollbar {
    height: 6px;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 1px grey;
    border-radius: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: rgba(0,0,0,.1);
    border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: rgba(0,0,0,.2);;
}

.animated {
	background-repeat: no-repeat;
	-webkit-animation-duration: 1.5s;
	animation-duration: 1.5s;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
}

@-webkit-keyframes fadeInDown {
	0% {
		opacity: 0;
    -webkit-transform: translateY(-60px);
	}
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}

@keyframes fadeInDown {
	0% {
		opacity: 0;
		transform: translateY(-60px);
	}
	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

.fadeInDown {
	-webkit-animation-name: fadeInDown;
	animation-name: fadeInDown;
}

@-webkit-keyframes fadeInUp {
	0% {
		opacity: 0;
    -webkit-transform: translateY(50px);
	}
  100% {
    opacity: 1;
    -webkit-transform: translateY(0);
  }
}

@keyframes fadeInUp {
	0% {
		opacity: 0;
		transform: translateY(50px);
	}
	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

.fadeInUp {
	-webkit-animation-name: fadeInUp;
	animation-name: fadeInUp;
}

#infinity {
	margin-top: 50px;
	width: 100%;
	height: 70px;
	font-size: 20px;
	text-align: center;
}

.menu_item {
	text-decoration: none;
	color: black;
}

#top_menu_text {
	color: black;
	font-family: Quicksand-Regular;
	font-size: 30px;
	text-align: center;
	padding: 0px;
	margin-top: 50px;
}

#moving_menu_text {
	color: black;
	font-family: Quicksand-Regular;
	font-size: 20px;
	text-align: center;
	padding: 0px;
}

#navbar {
	position: fixed;
	top: 0;
	width: 100%;
	height: 50px;
	z-index: 100;
	background-color: white;
	display: none;
}

#footer {
	background-color: white;
	font-family: Roboto-Light;
	font-size: 12px;
	width: 100%;
	text-align: center;
}

.container {
  position: relative;
  width: 100%;
	margin-bottom: 25px;
}

.image {
  display: block;
  width: 100%;
  height: auto;
	border-radius: 25%;
	border: 2px solid #ddd;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: rgb(0,0,0, 0.85);
	border-radius: 25%;
	border: 2px solid #ddd;
}

.container:hover .overlay {
  opacity: 1;
}

.text {
  color: white;
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
	width: 95%;
}

.main {
	font-size: 25px;
	top: 50px;
	font-family: Roboto-Regular;
}

.sub {
  font-size: 15px;
  top: 110px;
	font-family: Roboto-Light;
}

.sub2 {
  top: 130px;
}

.links {
  font-size: 18px;
  top: 170px;
	font-family: Roboto-Light;
}

.links2 {
	top: 200px;
}

.links3 {
	top: 210px;
}

.link {
	color: white;
	text-decoration: none;
}

.publicationlink {
	color: #000080;
	text-decoration: none;
}

